# automaton

./: .cproject  .gitignore  .project  Automaton.sln  Automaton.vcxproj  CMakeLists.txt  CudaRuntime1.vcxproj  Makefile  README.md  automaton.c  automaton.cfg  automaton.cu  automaton.cuh  automaton.h  automaton_bak.cfg  backup.rsp  bresenham.h  brick.c  brick.h  build.bat  callbacks.cu  callbacks.h  clean  color.c  combine.c  combine.h  common.h  commute.cu  compare.cu  config.cfg  dark-orbis.c  donate.html  engine.c  engine.h  expand.cu  gadget.c  gadget.h  glew.c  graph.cu  graphics.c  (+56 more)
.github/: FUNDING.yml
CDT/: animator.cpp  animator.h  arcball.c  arcball.h  bresemham.c  bresenham.h  camera.cpp  camera.h  common.h  copy.c  dark-orbis.c  engine.c  engine.h  gadget.c  gadget.h  graphics.c  graphics.h  init.c  initSim.c  interact.c  keyboard.c  keyboard.h  main3d.c  main3d.h  model.c  mouse.c  mouse.h  moves.c  mygl.cpp  mygl.h  phase1.c  phase2.c  phase3.c  phase4.c  plot3d.c  plot3d.h  printCell.c  quaternion.c  quaternion.h  renderer.cpp  (+25 more)
CDT/model/: automaton.cpp  empodion.cpp  initSim.cpp  interact.cpp  pairs.cpp  simulation.cpp  simulation.h  spread.cpp  transfer.cpp  traveller.cpp  utils.cpp
CDT/test/: entropy.c  md5.c  md5driver.c  printCell.c  printCell.cpp  sanity.cpp  test-expand.c  test-tree.c  test-update.c  test-utils.c  test.c  test.h  tests.h
buggedcode/: dynamics.c  graphics.c  graphics.h  initSim.c  main3d.c  main3d.h  moves.c  simulation.c  simulation.h
cuda/: Automaton.vcxproj  automaton.cu  callbacks.cu  compare.cu  expand.cu  glew.c  initialize.cu  replicate.cu
glad/: glad.c
include/glad/: glad.h
lib/: freetype.lib  zlib.lib
linux_cuda/: Makefile  automaton.cu  automaton.h  brick.cu  init.cu  linux_cuda.md  mouse.cu  plot3d.cu  quaternion.cu  rotation.cu  scenarios.cu  text.cu  tree.cu  tuple.cu  utils.cu  vector3d.cu
linux_cuda/include/: brick.h  params.h  plot3d.h  scenarios.h
src/: GUI.cpp  GUI.h  GUI_2D.cpp  GUI_3D.cpp  GUI_3DXXX.cpp  GUI_Debug.cpp  GUI_HelpTexts.cpp  GUI_Init.cpp  GUI_InitWidgets.cpp  GUI_Panels.cpp  GUI_Tomo.cpp  Renderer2D.cpp  animator.cpp  animator.h  button.cpp  button.h  ca_callback.cpp  ca_window.cpp  callback.cpp  camera.cpp  camera.h  cawindow.cpp  cawindow.h  config.cpp  core.cpp  cortina.cpp  cuda_integration.cpp  debug.cpp  draw_utils.cpp  dropdown.cpp  dropdown.h  freetype_text.h  globals.cpp  help.cpp  hslider.h  hud.cpp  input.cpp  layers.h  logo.cpp  logo.h  (+37 more)
src/ac_project/: bridge_simple.cpp  core_sphere.cpp  globals.cpp  sphere_kernel.cpp  test_antipodal.cpp  test_convolution.cpp  test_full_cycle.cpp  test_relocation.cpp  test_sphere.c  test_wavefront.cpp
src/automaton/: automaton_compute_cuda.cu  automaton_init.cu
src/cuda/: bridge_cuda.cu  cuda_automaton.cu  cuda_constants.cu  cuda_constants.h  cuda_sim.cu  cuda_sim.h
src/glad/: glad.c
src/include/: GUI.h  GUI3D.h  Renderer2D.h  animator.h  app_context.h  button.h  ca_window.h  callbacks.h  camera.h  color_utils.h  config.h  core.h  cortina.h  draw_utils.h  dropdown.h  freetype_text.h  glm_config.h  glm_host_only.h  globals.h  help.h  hslider.h  hud.h  hyperlink.h  input.h  layers.h  logo.h  menubar.h  mouse_helper.h  progress.h  projection.h  projection_manager.h  radio.h  recorder.h  rect_renderer.h  render_pipeline.h  renderer.h  replay.h  replay_progress.h  scene.h  shader.h  (+11 more)
src/include/ac_project/: core_sphere.h
src/include/glad/: glad.h
src/include/model/: automaton_compute.h  automaton_constants.h  cuda.h  geometry.h  simulation.h  voxel.h
src/include/zlib/cuda/: cuda_api.h  cuda_common.h  cuda_sim_optimized.h
src/model/: bridge.cpp  convolutes.cpp  debug.cpp  geometry.cpp  initSim.cpp  interaction.cpp  layer.h  simulation.cpp  simulation.h  simulation_bk.cpp  utils.cpp
src/old-model/: bridge.cpp  geometry.cpp  initSim.cpp  simulation.cpp  utils.cpp
src/shaders/: points.frag  points.vert  slider.frag  slider.vert
trackball/: main3d.c  mouse.c  plot3d.c  plot3d.h  simulation.c  simulation.h  utils.c  utils.h
universe/: GLutils.cpp  GLutils.h  GUIrenderer.cpp  GUIrenderer.h  Makefile  animator.cpp  animator.h  camera.cpp  camera.h  hslider.h  layers.h  mygl.cpp  mygl.h  progress.cpp  progress.h  radio.h  renderer.cpp  renderer.h  slider.h  sound.cpp  splash.cpp  splash.h  stats.cpp  stats.h  tickbox.h  trackball.cpp  trackball.h  vector_add.cu  vslider.h  window.cpp  window.h
universe/model/: convolutes.cpp  entropy.cpp  entropy.h  initSim.cpp  interaction.cpp  io.cpp  layer.h  nvector.h  poincare.cpp  poincare.h  simul.cpp  simul.h  simulation.cpp  simulation.h  stuff.cpp  tests.cpp  tree.cpp  utils.cpp
zenodo/: backup-220425.tex  cover-letter.tex  essay.tex  fsm.bib  letter.tex  main.tex  title-page.tex
